# NeuralNetwork

./: .gitignore  CMakeLists.txt  main.cpp
Include/Evolutionary/: EvolutionSim.h
Include/NeuralNetwork/: Layer.h  NeuralNetwork.h
Include/Utilities/: DataLoader.h  Functions.h  Printer.h  Random.h
Src/Evolutionary/: EvolutionSim.cpp
Src/Network/: Layer.cpp  NeuralNetwork.cpp
Src/Utilities/: DataLoader.cpp  Functions.cpp  Printer.cpp  Random.cpp
